--- a/src/main/resources/views/DispositivosMantenim.fxml
+++ b/src/main/resources/views/DispositivosMantenim.fxml
@@ -77,7 +77,7 @@
                   <Label text="Comentario registro:" GridPane.rowIndex="8" />
                   <ComboBox fx:id="cboxProveedor" prefHeight="25.0" prefWidth="258.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
                   <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="237.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <ComboBox prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="cboxEspacio" prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
                   <ComboBox fx:id="cboxPrograma" prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
                   <TextArea fx:id="txtComent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="8" GridPane.rowSpan="2" />
                   <TextField fx:id="txtMac" GridPane.columnIndex="1" GridPane.rowIndex="5" />
