--- a/src/main/resources/views/Prestamos.fxml
+++ b/src/main/resources/views/Prestamos.fxml
@@ -2,13 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PrestamosController">
    <padding>
@@ -26,11 +30,47 @@
             <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminarAction" text="Eliminar" />
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" />
+      <GridPane maxWidth="800.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="342.0" minWidth="10.0" prefWidth="103.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="319.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="432.0" minWidth="2.0" prefWidth="25.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="62.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="764.0" minWidth="10.0" prefWidth="292.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Sede alumno:" />
+            <Label text="Marca dispositivo:" GridPane.rowIndex="1" />
+            <Label text="Curso:" GridPane.columnIndex="3" />
+            <Label text="Categoría:" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <TextField fx:id="txtCurso" GridPane.columnIndex="4" />
+            <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="422.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="cboxMarca" prefHeight="25.0" prefWidth="424.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxCategoria" prefHeight="25.0" prefWidth="301.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" spacing="10.0">
+         <children>
+            <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#btnBuscarAction" text="Buscar" />
+            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#btnLimpiarAction" text="Limpiar filtros" />
+         </children></HBox>
       <TableView fx:id="tablaPrest" onMouseClicked="#capturarClick" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
         <columns>
           <TableColumn fx:id="colDispositivo" prefWidth="300.0" text="Dispositivo" />
+            <TableColumn fx:id="colNetiqueta" prefWidth="75.0" text="N.Etiqueta" />
+            <TableColumn fx:id="colMarca" prefWidth="75.0" text="Marca" />
+            <TableColumn fx:id="colModelo" prefWidth="75.0" text="Modelo" />
+            <TableColumn fx:id="colNserie" prefWidth="75.0" text="N.Serie" />
+            <TableColumn fx:id="colNimei" prefWidth="75.0" text="Imei" />
+            <TableColumn fx:id="colCategoria" prefWidth="75.0" text="Categoría" />
           <TableColumn fx:id="colAlumno" prefWidth="300.0" text="Alumno" />
+            <TableColumn fx:id="colNre" prefWidth="75.0" text="NRE" />
+            <TableColumn fx:id="colSede" prefWidth="75.0" text="Sede" />
+            <TableColumn fx:id="colCurso" prefWidth="75.0" text="Curso" />
             <TableColumn fx:id="colFechIni" text="Fecha inicio" />
             <TableColumn fx:id="colFechFin" text="Fecha fin" />
         </columns>
