--- a/src/main/resources/views/PrestamosMantenim.fxml
+++ b/src/main/resources/views/PrestamosMantenim.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -56,10 +57,10 @@
                   <Label text="Modelo:" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                   <Label text="Nº serie:" GridPane.rowIndex="2" />
                   <Label text="Imei:" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                  <Label text="Nombre alumno:" GridPane.rowIndex="5" />
-                  <Label text="NRE:" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                  <Label text="Sede:" GridPane.rowIndex="6" />
-                  <Label text="Curso:" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <Label text="Nombre alumno:" GridPane.rowIndex="6" />
+                  <Label text="NRE:" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <Label text="Sede:" GridPane.rowIndex="5" />
+                  <Label text="Curso:" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                   <DatePicker fx:id="dtpFechaIni" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                   <DatePicker fx:id="dtpFechaFin" GridPane.columnIndex="4" GridPane.rowIndex="8" />
                   <Label text="Fecha de inicio:" GridPane.rowIndex="8" />
@@ -70,11 +71,11 @@
                   <TextField fx:id="txtModelo" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                   <TextField fx:id="txtNserie" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="txtImei" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                  <TextField fx:id="txtNombreAlu" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <TextField fx:id="txtNRE" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                  <TextField fx:id="txtSede" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="txtCurso" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                  <TextField fx:id="txtNRE" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                  <TextField fx:id="txtCurso" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="5" />
                   <Button mnemonicParsing="false" text="Seleccionar alumno" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="306.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <ComboBox fx:id="cboxAlumno" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
                <padding>
                   <Insets left="20.0" right="50.0" top="10.0" />
