--- a/src/main/resources/views/Acceso.fxml
+++ b/src/main/resources/views/Acceso.fxml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?> 
-<?import javafx.scene.control.Button?>                        
-<?import javafx.scene.control.PasswordField?>                 
-<?import javafx.scene.control.TextField?>                     
-<?import javafx.scene.image.ImageView?>                       
-<?import javafx.scene.layout.AnchorPane?>                     
-<?import javafx.scene.layout.BorderPane?>                     
-<?import javafx.scene.text.Font?>                             
-<?import javafx.scene.text.Text?>                             
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <!-- Contenedor principal de la interfaz, con tamaño fijo -->
-<BorderPane maxHeight="611.0" maxWidth="550.0" minHeight="611.0" minWidth="550.0"
-            prefHeight="611.0" prefWidth="550.0" 
-            xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.AccesoController">
+
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AccesoController">
 
    <!-- Región central del BorderPane, contiene el formulario -->
    <center>
       <!-- Panel anclado (posicionamiento absoluto), tamaño fijo -->
-      <AnchorPane maxHeight="589.0" maxWidth="384.0" minHeight="589.0" minWidth="384.0"
-                  prefHeight="589.0" prefWidth="384.0"
-                  BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="589.0" maxWidth="384.0" minHeight="589.0" minWidth="384.0" prefHeight="589.0" prefWidth="384.0" BorderPane.alignment="CENTER">
          <children>
 
             <!-- Título principal "Login" -->
@@ -33,41 +28,25 @@
             </Text>
 
             <!-- Icono de usuario (FontAwesome) -->
-            <FontAwesomeIconView glyphName="USER" layoutX="34.0" layoutY="263.0" size="27" />
+            <FontAwesomeIconView glyphName="USER" layoutX="34.0" layoutY="270.0" size="27" />
 
             <!-- Campo de texto para ingresar el nombre de usuario -->
-            <TextField fx:id="txtUsuario"
-                       layoutX="79.0" layoutY="236.0"
-                       prefHeight="30.0" prefWidth="250.0"
-                       promptText="Usuario" />
+            <TextField fx:id="txtUsuario" layoutX="79.0" layoutY="245.0" prefHeight="30.0" prefWidth="250.0" promptText="Usuario" />
 
             <!-- Icono de llave (para contraseña) -->
-            <FontAwesomeIconView glyphName="KEY" layoutX="34.0" layoutY="366.0" size="27" />
+            <FontAwesomeIconView glyphName="KEY" layoutX="34.0" layoutY="355.0" size="27" />
 
             <!-- Campo de texto para ingresar la contraseña -->
-            <PasswordField fx:id="txtPassword"
-                           layoutX="79.0" layoutY="339.0"
-                           prefHeight="30.0" prefWidth="250.0"
-                           promptText="Contraseña" />
+            <PasswordField fx:id="txtPassword" layoutX="79.0" layoutY="330.0" prefHeight="30.0" prefWidth="250.0" promptText="Contraseña" />
 
             <!-- Botón para iniciar sesión -->
-            <Button fx:id="btnLogin"
-                    layoutX="79.0" layoutY="431.0"
-                    onAction="#btnActionLogin"
-                    prefHeight="30.0" prefWidth="100.0"
-                    text="Acceder" />
+            <Button fx:id="btnLogin" layoutX="79.0" layoutY="431.0" onAction="#btnActionLogin" prefHeight="30.0" prefWidth="100.0" text="Acceder" />
 
             <!-- Botón para ir al formulario de registro -->
-            <Button fx:id="btnRegistrarse"
-                    layoutX="229.0" layoutY="431.0"
-                    onAction="#btnActionRegistrarse"
-                    prefHeight="30.0" prefWidth="100.0"
-                    text="Ir a Registrarse" />
+            <Button fx:id="btnRegistrarse" layoutX="229.0" layoutY="431.0" onAction="#btnActionRegistrarse" prefHeight="30.0" prefWidth="100.0" text="Ir a Registrarse" />
 
             <!-- Imagen decorativa o de logotipo (puedes cargarle una imagen desde el controlador si lo deseas) -->
-            <ImageView fitHeight="42.0" fitWidth="42.0"
-                       layoutX="160.0" layoutY="500.0"
-                       pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="160.0" layoutY="500.0" pickOnBounds="true" preserveRatio="true" />
 
          </children>
       </AnchorPane>
