--- a/src/main/resources/views/Alumnos.fxml
+++ b/src/main/resources/views/Alumnos.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,37 +9,56 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="580.0" prefWidth="886.0" spacing="15" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AlumnosController">
+<VBox spacing="15.0" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AlumnosController">
 
     <!-- Título centrado -->
-    <Label style="-fx-font-size: 20;" text="Tabla de Alumnos" />
+    <Label text="Alumnos">
+      <font>
+         <Font size="24.0" />
+      </font></Label>
 
     <!-- Botones en línea -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoAlumno" onAction="#btnActionNuevoAlumno" text="Nuevo Alumno" />
-        <Button fx:id="btnEliminarAlumno" onAction="#btnActionEliminarAlumno" text="Eliminar Alumno" />
+        <Button fx:id="btnNuevoAlumno" onAction="#btnActionNuevoAlumno" text="Nuevo Alumno">
+         <graphic>
+            <FontAwesomeIconView glyphName="PLUS" />
+         </graphic></Button>
+        <Button fx:id="btnEliminarAlumno" onAction="#btnActionEliminarAlumno" text="Eliminar Alumno">
+         <graphic>
+            <FontAwesomeIconView glyphName="TRASH" />
+         </graphic></Button>
         <Button fx:id="btnImportar" onAction="#btnImportarAction" text="Importar">
             <tooltip>
                 <Tooltip text="Desde un archivo .csv" />
             </tooltip>
+         <graphic>
+            <FontAwesomeIconView glyphName="DOWNLOAD" />
+         </graphic>
         </Button>
         <Button fx:id="btnExportar" onAction="#btnExportarAction" text="Exportar">
             <tooltip>
                 <Tooltip text="A un archivo .csv" />
             </tooltip>
+         <graphic>
+            <FontAwesomeIconView glyphName="UPLOAD" />
+         </graphic>
         </Button>
     </HBox>
 
     <!-- Barra de búsqueda -->
-    <HBox prefHeight="25.0" prefWidth="671.0" spacing="10">
+    <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="671.0" spacing="10">
         <Label text="Buscar:" />
-        <TextField fx:id="txtBuscar" prefHeight="30.0" prefWidth="350.0" promptText="Escribe para buscar..." />
-        <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="30.0" text="Buscar" />
+        <TextField fx:id="txtBuscar" prefWidth="300.0" promptText="Escribe para buscar..." />
+        <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="30.0" text="Buscar">
+         <graphic>
+            <FontAwesomeIconView glyphName="BINOCULARS" />
+         </graphic></Button>
     </HBox>
 
     <!-- Tabla -->
-    <TableView fx:id="tablaUsuarios" prefHeight="500.0" VBox.vgrow="ALWAYS">
+    <TableView fx:id="tablaUsuarios" prefHeight="500.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
         <columns>
             <TableColumn fx:id="colCodigo" prefWidth="120.0" text="Código Alumno" />
             <TableColumn fx:id="colNombre" prefWidth="160.0" text="Nombre" />
