--- a/src/main/resources/views/CategoriaMantenim.fxml
+++ b/src/main/resources/views/CategoriaMantenim.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,22 +12,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.CategoriaMantenimController">
+<AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoriaMantenimController">
 
     <children>
         <!-- Título -->
-        <Text fill="black" layoutX="120.0" layoutY="50.0" text="Agregar Categoría">
+        <Text fill="black" layoutX="70.0" layoutY="50.0" text="Mantenimiento de Categorías">
             <font>
-                <Font size="26.0" />
+                <Font size="24.0" />
             </font>
         </Text>
 
         <!-- Formulario -->
         <GridPane hgap="10" layoutX="60.0" layoutY="80.0" vgap="20">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10" />
+                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
 
             <!-- Nombre -->
@@ -43,7 +42,13 @@
         </GridPane>
 
         <!-- Botones -->
-        <Button fx:id="btnGuardar" layoutX="100.0" layoutY="220.0" prefWidth="120.0" text="Guardar" />
-        <Button fx:id="btnCancelar" layoutX="230.0" layoutY="220.0" prefWidth="120.0" onAction="#btnActionCancelar" text="Cancelar" />
+        <Button fx:id="btnGuardar" layoutX="100.0" layoutY="220.0" prefWidth="120.0" text="Guardar">
+         <graphic>
+            <FontAwesomeIconView glyphName="SAVE" />
+         </graphic></Button>
+        <Button fx:id="btnCancelar" layoutX="230.0" layoutY="220.0" onAction="#btnActionCancelar" prefWidth="120.0" text="Cancelar">
+         <graphic>
+            <FontAwesomeIconView glyphName="UNDO" />
+         </graphic></Button>
     </children>
 </AnchorPane>
