--- a/src/main/resources/views/CentroEducativo.fxml
+++ b/src/main/resources/views/CentroEducativo.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,38 +10,57 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CentroEducativoController">
+<VBox spacing="15.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CentroEducativoController">
 
     <!-- Título -->
-    <Label text="Tabla de Centros Educativos" />
+    <Label text="Centros Educativos">
+      <font>
+         <Font size="24.0" />
+      </font></Label>
 
     <!-- Botones -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" text="Nuevo Centro" />
-        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" text="Eliminar Centro" />
+        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" text="Nuevo Centro">
+         <graphic>
+            <FontAwesomeIconView glyphName="PLUS" />
+         </graphic></Button>
+        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" text="Eliminar Centro">
+         <graphic>
+            <FontAwesomeIconView glyphName="TRASH" />
+         </graphic></Button>
         <Button fx:id="btnImportar" mnemonicParsing="false" onAction="#btnImportarAction" text="Importar">
             <tooltip>
                 <Tooltip text="Desde un archivo .csv" />
             </tooltip>
+         <graphic>
+            <FontAwesomeIconView glyphName="DOWNLOAD" />
+         </graphic>
         </Button>
         <Button fx:id="btnExportar" mnemonicParsing="false" onAction="#btnExportarAction" text="Exportar">
             <tooltip>
                 <Tooltip text="A un archivo .csv" />
             </tooltip>
+         <graphic>
+            <FontAwesomeIconView glyphName="UPLOAD" />
+         </graphic>
         </Button>
       <Button fx:id="btnEstablecer" mnemonicParsing="false" onAction="#btnEstablecerAction" text="Establecer centro activo" />
     </HBox>
 
     <!-- Barra de búsqueda -->
-    <HBox spacing="10">
-        <Label prefHeight="35.0" prefWidth="60.0" text="Buscar:" />
-        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." />
-        <Button fx:id="btnBuscarCentro" onAction="#btnBuscarCentroAction" prefHeight="35.0" text="Buscar" />
+    <HBox alignment="CENTER_LEFT" spacing="10">
+        <Label text="Buscar:" />
+        <TextField fx:id="txtBuscar" prefWidth="300.0" promptText="Escribe para buscar..." />
+        <Button fx:id="btnBuscarCentro" onAction="#btnBuscarCentroAction" text="Buscar">
+         <graphic>
+            <FontAwesomeIconView glyphName="BINOCULARS" />
+         </graphic></Button>
     </HBox>
 
     <!-- Tabla de centros educativos -->
-    <TableView fx:id="tablaCentroEducativos" prefHeight="500.0" VBox.vgrow="ALWAYS">
+    <TableView fx:id="tablaCentroEducativos" prefHeight="500.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
         <columns>
             <TableColumn fx:id="colCodigoCentro" prefWidth="100.0" text="Código Centro" />
             <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
@@ -52,5 +73,8 @@
             <TableColumn fx:id="colEmail" prefWidth="180.0" text="Email" />
         </columns>
     </TableView>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 
 </VBox>
