--- a/src/main/resources/views/CentroEducativoMantenim.fxml
+++ b/src/main/resources/views/CentroEducativoMantenim.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -19,9 +20,9 @@
         <AnchorPane prefHeight="500.0" prefWidth="800.0" BorderPane.alignment="CENTER">
 
             <!-- Título centrado arriba -->
-            <Text layoutX="260.0" layoutY="71.0" text="Centro Educativo">
+            <Text layoutX="180.0" layoutY="71.0" text="Mantenimiento de Centros Educativos">
                 <font>
-                    <Font size="26.0" />
+                    <Font size="24.0" />
                 </font>
             </Text>
 
@@ -96,10 +97,16 @@
             </HBox>
 
             <!-- Botones abajo centrados -->
-            <HBox layoutX="250.0" layoutY="420.0" spacing="20.0">
+            <HBox alignment="CENTER" layoutX="250.0" layoutY="420.0" spacing="40.0">
                 <children>
-                    <Button fx:id="btnGuardar" prefHeight="35" prefWidth="120" text="Guardar" />
-                    <Button fx:id="btnCancelar" onAction="#btnActionCancelar" prefHeight="35" prefWidth="120" text="Cancelar" />
+                    <Button fx:id="btnGuardar" prefWidth="120" text="Guardar">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="SAVE" />
+                  </graphic></Button>
+                    <Button fx:id="btnCancelar" onAction="#btnActionCancelar" prefWidth="120.0" text="Cancelar">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="UNDO" />
+                  </graphic></Button>
                 </children>
             </HBox>
 
