--- a/src/main/resources/views/Dispositivos.fxml
+++ b/src/main/resources/views/Dispositivos.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -22,44 +23,62 @@
          </font></Label>
       <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" spacing="20.0">
          <children>
-            <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#btnNuevoAction" text="Nuevo" />
-            <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminarAction" text="Eliminar" />
-            <Button fx:id="btnImportar" mnemonicParsing="false" onAction="#btnImportarAction" text="Importar" />
-            <Button fx:id="btnExportar" mnemonicParsing="false" onAction="#btnExportarAction" text="Exportar" />
+            <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#btnNuevoAction" text="Nuevo dispositivo">
+               <graphic>
+                  <FontAwesomeIconView glyphName="PLUS" />
+               </graphic></Button>
+            <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminarAction" text="Eliminar dispositivo">
+               <graphic>
+                  <FontAwesomeIconView glyphName="TRASH" />
+               </graphic></Button>
+            <Button fx:id="btnImportar" mnemonicParsing="false" onAction="#btnImportarAction" text="Importar">
+               <graphic>
+                  <FontAwesomeIconView glyphName="DOWNLOAD" />
+               </graphic></Button>
+            <Button fx:id="btnExportar" mnemonicParsing="false" onAction="#btnExportarAction" text="Exportar">
+               <graphic>
+                  <FontAwesomeIconView glyphName="UPLOAD" />
+               </graphic></Button>
          </children></HBox>
-      <GridPane VBox.vgrow="NEVER">
+      <GridPane maxWidth="1200.0" VBox.vgrow="NEVER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="10.0" prefWidth="56.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
-            <ColumnConstraints hgrow="SOMETIMES" prefWidth="25.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="67.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="278.0" />
-            <ColumnConstraints hgrow="SOMETIMES" prefWidth="25.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="548.0" minWidth="10.0" prefWidth="66.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="279.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="60.0" minWidth="10.0" prefWidth="60.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="60.0" minWidth="10.0" prefWidth="60.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="10.0" prefWidth="65.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="txtNombre" prefHeight="25.0" prefWidth="332.0" GridPane.columnIndex="1" />
+            <TextField fx:id="txtNombre" prefWidth="320.0" GridPane.columnIndex="1" />
             <Label text="Nombre:" />
             <Label text="Categoría:" GridPane.columnIndex="3" />
             <Label text="Marca:" GridPane.columnIndex="6" />
             <Label text="Sede:" GridPane.rowIndex="1" />
             <Label text="Programa:" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Label text="Proveedor:" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-            <ComboBox fx:id="cboxCategoria" prefHeight="25.0" prefWidth="320.0" GridPane.columnIndex="4" />
-            <ComboBox fx:id="cboxMarca" prefHeight="25.0" prefWidth="325.0" GridPane.columnIndex="7" />
-            <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="385.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="cboxPrograma" prefHeight="25.0" prefWidth="325.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-            <ComboBox fx:id="cboxProveedor" prefHeight="25.0" prefWidth="324.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxCategoria" prefWidth="320.0" GridPane.columnIndex="4" />
+            <ComboBox fx:id="cboxMarca" prefWidth="320.0" GridPane.columnIndex="7" />
+            <ComboBox fx:id="cboxSede" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxPrograma" prefWidth="320.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxProveedor" prefWidth="320.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Label text="Prestado:" GridPane.rowIndex="2" />
+            <ComboBox fx:id="cboxPrestado" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" spacing="10.0">
          <children>
-            <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#btnBuscarAction" text="Buscar" />
+            <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#btnBuscarAction" text="Buscar">
+               <graphic>
+                  <FontAwesomeIconView glyphName="BINOCULARS" />
+               </graphic></Button>
             <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#btnLimpiarAction" text="Limpiar filtros" />
          </children></HBox>
       <TableView fx:id="tablaDisp" onMouseClicked="#capturarClick" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
