--- a/src/main/resources/views/EspacioMantenim.fxml
+++ b/src/main/resources/views/EspacioMantenim.fxml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.EspacioMantenimController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EspacioMantenimController">
 
 
-    <VBox spacing="15" alignment="TOP_LEFT"
-          AnchorPane.topAnchor="20.0" AnchorPane.leftAnchor="20.0"
-          AnchorPane.rightAnchor="20.0" AnchorPane.bottomAnchor="20.0">
+    <VBox spacing="15" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
 
         <!-- Título -->
-        <Label text="Formulario de Espacio Educativo"
-               style="-fx-font-size: 18px; -fx-font-weight: bold;" />
+        <Label text="Mantenimiento de Espacios Educativos">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <padding>
+            <Insets bottom="20.0" left="50.0" />
+         </padding>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin></Label>
 
         <!-- Formulario -->
         <GridPane hgap="10" vgap="10">
@@ -25,32 +40,42 @@
             </columnConstraints>
 
             <Label text="Nombre:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id="txtNombre" promptText="Ej. Aula 101"
-                       GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <TextField fx:id="txtNombre" promptText="Ej. Aula 101" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
             <Label text="Pabellón:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id="txtPabellon" promptText="Ej. Norte"
-                       GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtPabellon" promptText="Ej. Norte" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
             <Label text="Planta:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <Spinner fx:id="spinnerPlanta"
-                     GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Spinner fx:id="spinnerPlanta" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             <Label text="Sede:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <ComboBox fx:id="comboSede" promptText="Selecciona una sede"
-                      prefWidth="300.0"
-                      GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="comboSede" prefWidth="300.0" promptText="Selecciona una sede" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             
             <Label text="Nº Ábaco:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <TextField fx:id="txtNumAbaco" promptText="Ej. A1234"
-                       GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtNumAbaco" promptText="Ej. A1234" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
 
         </GridPane>
 
         <!-- Botones -->
-        <HBox spacing="15" alignment="CENTER_RIGHT">
-            <Button fx:id="btnGuardar" text="Guardar" onAction="#btnGuardarAction" />
-            <Button fx:id="btnCancelar" text="Cancelar" onAction="#btnCancelarAction" />
+        <HBox alignment="CENTER" prefHeight="80.0" spacing="40.0">
+            <Button fx:id="btnGuardar" onAction="#btnGuardarAction" prefWidth="140.0" text="Guardar">
+            <graphic>
+               <FontAwesomeIconView glyphName="SAVE" />
+            </graphic></Button>
+            <Button fx:id="btnCancelar" onAction="#btnCancelarAction" prefWidth="140.0" text="Cancelar">
+            <graphic>
+               <FontAwesomeIconView glyphName="UNDO" />
+            </graphic></Button>
+         <padding>
+            <Insets top="50.0" />
+         </padding>
         </HBox>
     </VBox>
 </AnchorPane>
