--- a/src/main/resources/views/ProveedoresMantenim.fxml
+++ b/src/main/resources/views/ProveedoresMantenim.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -66,10 +67,16 @@
             </GridPane>
          </center>
          <bottom>
-            <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0" spacing="40.0" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER" prefHeight="80.0" spacing="40.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="btnGuardar" mnemonicParsing="false" onAction="#btnGuardarAction" text="Guardar" />
-                  <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#btnCancelarAction" text="Cancelar" />
+                  <Button fx:id="btnGuardar" mnemonicParsing="false" onAction="#btnGuardarAction" prefWidth="140.0" text="Guardar">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="SAVE" />
+                     </graphic></Button>
+                  <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#btnCancelarAction" prefWidth="140.0" text="Cancelar">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="UNDO" />
+                     </graphic></Button>
                </children>
             </HBox>
          </bottom>
