--- a/src/main/resources/views/SedeMantenim.fxml
+++ b/src/main/resources/views/SedeMantenim.fxml
@@ -1,44 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox spacing="10" alignment="TOP_LEFT" xmlns="http://javafx.com/javafx/23.0.1"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="controller.SedeMantenimController"
-      style="-fx-padding: 20;" prefWidth="450.0" prefHeight="500.0">
+<VBox alignment="TOP_LEFT" prefHeight="500.0" prefWidth="500.0" spacing="10" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SedeMantenimController">
 
-    <Label text="Mantenimiento de Sede" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
+    <Label text="Mantenimiento de Sedes">
+      <font>
+         <Font size="24.0" />
+      </font>
+      <padding>
+         <Insets bottom="20.0" left="60.0" />
+      </padding>
+      <VBox.margin>
+         <Insets left="40.0" />
+      </VBox.margin></Label>
 
     <GridPane hgap="10" vgap="10">
-        <Label text="Nombre:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtNombre" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+        <Label text="Nombre:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <TextField fx:id="txtNombre" prefHeight="25.0" prefWidth="322.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-        <Label text="Calle:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtCalle" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+        <Label text="Calle:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="txtCalle" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label text="Localidad:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtLocalidad" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+        <Label text="Localidad:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <TextField fx:id="txtLocalidad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label text="C.P.:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtCP" GridPane.rowIndex="3" GridPane.columnIndex="1" />
+        <Label text="C.P.:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField fx:id="txtCP" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-        <Label text="Municipio:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtMunicipio" GridPane.rowIndex="4" GridPane.columnIndex="1" />
+        <Label text="Municipio:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <TextField fx:id="txtMunicipio" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-        <Label text="Provincia:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtProvincia" GridPane.rowIndex="5" GridPane.columnIndex="1" />
+        <Label text="Provincia:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <TextField fx:id="txtProvincia" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-        <Label text="Teléfono:" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-        <TextField fx:id="txtTelefono" GridPane.rowIndex="6" GridPane.columnIndex="1" />
+        <Label text="Teléfono:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+        <TextField fx:id="txtTelefono" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-        <Label text="Código Centro:" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-        <ComboBox fx:id="comboCodigoCentro" prefWidth="200" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+        <Label text="Código Centro:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+        <ComboBox fx:id="comboCodigoCentro" prefWidth="200" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
     </GridPane>
 
-    <HBox spacing="10" alignment="CENTER_RIGHT">
-        <Button fx:id="btnGuardar" text="Guardar" />
-        <Button fx:id="btnCancelar" text="Cancelar" onAction="#btnActionCancelar" />
+    <HBox alignment="CENTER" spacing="40.0">
+        <Button fx:id="btnGuardar" prefWidth="140.0" text="Guardar">
+         <graphic>
+            <FontAwesomeIconView glyphName="SAVE" />
+         </graphic></Button>
+        <Button fx:id="btnCancelar" onAction="#btnActionCancelar" prefWidth="140.0" text="Cancelar">
+         <graphic>
+            <FontAwesomeIconView glyphName="UNDO" />
+         </graphic></Button>
+      <VBox.margin>
+         <Insets top="40.0" />
+      </VBox.margin>
     </HBox>
 
 </VBox>
