--- a/src/main/resources/views/Acceso.fxml
+++ b/src/main/resources/views/Acceso.fxml
@@ -17,7 +17,7 @@
    <!-- Región central del BorderPane, contiene el formulario -->
    <center>
       <!-- Panel anclado (posicionamiento absoluto), tamaño fijo -->
-      <AnchorPane maxHeight="589.0" maxWidth="384.0" minHeight="589.0" minWidth="384.0" prefHeight="589.0" prefWidth="384.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
 
             <!-- Título principal "Login" -->
