--- a/src/main/resources/views/Registro.fxml
+++ b/src/main/resources/views/Registro.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Importaciones necesarias para los componentes -->
+
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,18 +13,12 @@
 <?import javafx.scene.text.Text?>
 
 <!-- Contenedor principal de tipo BorderPane, con controlador asociado -->
-<BorderPane maxHeight="700.0" maxWidth="600.0" minHeight="700.0" minWidth="600.0"
-            prefHeight="700.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.RegistroController">
+
+<BorderPane maxHeight="700.0" maxWidth="600.0" minHeight="585.0" minWidth="451.0" prefHeight="585.0" prefWidth="497.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RegistroController">
 
     <!-- Contenido principal centrado -->
     <center>
-        <AnchorPane maxHeight="600.0" maxWidth="500.0"
-                    minHeight="600.0" minWidth="500.0"
-                    prefHeight="600.0" prefWidth="500.0"
-                    BorderPane.alignment="CENTER">
+        <AnchorPane maxHeight="600.0" maxWidth="500.0" minHeight="511.0" minWidth="436.0" prefHeight="585.0" prefWidth="459.0" BorderPane.alignment="CENTER">
 
             <children>
 
@@ -36,38 +31,24 @@
 
                 <!-- Campo: Usuario -->
                 <FontAwesomeIconView glyphName="USER" layoutX="75.0" layoutY="185.0" size="20" />
-                <TextField fx:id="txtUsuario" layoutX="110.0" layoutY="160.0"
-                           prefHeight="30.0" prefWidth="300.0"
-                           promptText="Usuario" />
+                <TextField fx:id="txtUsuario" layoutX="110.0" layoutY="160.0" prefHeight="30.0" prefWidth="300.0" promptText="Usuario" />
 
                 <!-- Campo: Correo electrónico -->
                 <FontAwesomeIconView glyphName="ENVELOPE" layoutX="75.0" layoutY="260.0" size="20" />
-                <TextField fx:id="txtEmail" layoutX="110.0" layoutY="235.0"
-                           prefHeight="30.0" prefWidth="300.0"
-                           promptText="Correo" />
+                <TextField fx:id="txtEmail" layoutX="110.0" layoutY="235.0" prefHeight="30.0" prefWidth="300.0" promptText="Correo" />
 
                 <!-- Campo: Contraseña -->
                 <FontAwesomeIconView glyphName="KEY" layoutX="75.0" layoutY="335.0" size="20" />
-                <PasswordField fx:id="txtPassword" layoutX="110.0" layoutY="310.0"
-                               prefHeight="30.0" prefWidth="300.0"
-                               promptText="Contraseña" />
+                <PasswordField fx:id="txtPassword" layoutX="110.0" layoutY="310.0" prefHeight="30.0" prefWidth="300.0" promptText="Contraseña" />
 
                 <!-- Botón: Volver al acceso -->
-                <Button fx:id="btnLogin" layoutX="110.0" layoutY="400.0"
-                        onAction="#btnActionLogin"
-                        prefHeight="30.0" prefWidth="120.0"
-                        text="Volver a Acceder" />
+                <Button fx:id="btnLogin" layoutX="110.0" layoutY="400.0" onAction="#btnActionLogin" prefHeight="30.0" prefWidth="120.0" text="Volver a Acceder" />
 
                 <!-- Botón: Registrarse -->
-                <Button fx:id="btnRegistrarse" layoutX="290.0" layoutY="400.0"
-                        onAction="#btnActionRegistrarse"
-                        prefHeight="30.0" prefWidth="120.0"
-                        text="Registrarse" />
+                <Button fx:id="btnRegistrarse" layoutX="290.0" layoutY="400.0" onAction="#btnActionRegistrarse" prefHeight="30.0" prefWidth="120.0" text="Registrarse" />
 
                 <!-- Imagen decorativa o logotipo (se puede cargar desde el controlador) -->
-                <ImageView fitHeight="42.0" fitWidth="42.0"
-                           layoutX="230.0" layoutY="470.0"
-                           pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="230.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
 
             </children>
         </AnchorPane>
