--- a/src/main/resources/views/Dispositivos.fxml
+++ b/src/main/resources/views/Dispositivos.fxml
@@ -103,6 +103,9 @@
             <TableColumn fx:id="colPrograma" prefWidth="75.0" text="ProgramaE" />
             <TableColumn fx:id="colObservaciones" prefWidth="75.0" text="Observaciones" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </children>
    <padding>
