--- a/src/main/resources/views/Prestamos.fxml
+++ b/src/main/resources/views/Prestamos.fxml
@@ -94,6 +94,9 @@
             <TableColumn fx:id="colFechIni" text="Fecha inicio" />
             <TableColumn fx:id="colFechFin" text="Fecha fin" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </children>
 </VBox>
