--- a/src/main/resources/views/Sidebar.fxml
+++ b/src/main/resources/views/Sidebar.fxml
@@ -8,16 +8,16 @@
 
     <!-- Nombre del usuario -->
     <Label fx:id="labelUsuario" alignment="CENTER" prefHeight="65.0" prefWidth="200.0" style="-fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold;" />
-   <Button onAction="#loadCentroEducativo" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Centros Educativos" />
-   <Button fx:id="btnDispositivos" onAction="#loadDispositivos" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Dispositivos" />
+   <Button onAction="#loadCentroEducativo" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Centros Educativos" />
+   <Button fx:id="btnDispositivos" onAction="#loadDispositivos" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Dispositivos" />
 
     <!-- Botón para Alumnos -->
-    <Button onAction="#loadUsuarios" prefHeight="52.0" prefWidth="200.0" styleClass="btnAlumnos" text="Alumnos" />
-   <Button fx:id="btnPrestamos" onAction="#loadPrestamos" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Pŕestamos" />
-   <Button fx:id="btnCategorias" onAction="#loadCategorias" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Categorías" />
-   <Button fx:id="btnMarcas" onAction="#loadMarcas" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Marcas" />
-   <Button fx:id="btnProveedores" onAction="#loadProveedores" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Proveedores" />
-   <Button fx:id="btnSedes" onAction="#loadSedes" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Sedes" />
-   <Button fx:id="btnEspacios" onAction="#loadEspacios" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Espacios" />
-   <Button fx:id="btnProgramas" onAction="#loadProgramas" prefHeight="52.0" prefWidth="200.0" styleClass="btnCentroEducativo" text="Programas educativos" />
+    <Button onAction="#loadUsuarios" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Alumnos" />
+   <Button fx:id="btnPrestamos" onAction="#loadPrestamos" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Pŕestamos" />
+   <Button fx:id="btnCategorias" onAction="#loadCategorias" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Categorías" />
+   <Button fx:id="btnMarcas" onAction="#loadMarcas" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Marcas" />
+   <Button fx:id="btnProveedores" onAction="#loadProveedores" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Proveedores" />
+   <Button fx:id="btnSedes" onAction="#loadSedes" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Sedes" />
+   <Button fx:id="btnEspacios" onAction="#loadEspacios" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Espacios" />
+   <Button fx:id="btnProgramas" onAction="#loadProgramas" prefHeight="52.0" prefWidth="200.0" styleClass="sidebar_button" text="Programas educativos" />
 </VBox>
